# Samples

./: CMakeLists.txt  Makefile  README.md  bandwidth.cpp  build.sh  gemm_test.cpp  gen_makefile.py  test.py
bandwidthTest/: Makefile
batch_gemm/: README.md
batch_gemm/graph/: batch_gemm_bf16-PreGraph-symbol.json  batch_gemm_fp8_143-PreGraph-symbol.json
binary/: README.md  binary.cpp
binary/graph/: add_fwd_bf16.recipe-PostGraph-symbol.json  add_fwd_f16.recipe-PreGraph-symbol.json  add_fwd_f32.recipe-PostGraph-symbol.json  binary.recipe-PreGraph-symbol.json  max_fwd_f16.recipe-PreGraph-symbol.json  max_fwd_f32.recipe-PreGraph-symbol.json  min_fwd_bf16.recipe-PreGraph-symbol.json  min_fwd_f32.recipe-PostGraph-symbol.json  mod_fwd_f32.recipe-PostGraph-symbol.json  mod_fwd_f32.recipe-PreGraph-symbol.json  mult_fwd_bf16.recipe-PostGraph-symbol.json  mult_fwd_bf16.recipe-PreGraph-symbol.json  mult_fwd_f16.recipe-PostGraph-symbol.json  mult_fwd_f32.recipe-PostGraph-symbol.json  mult_fwd_f32.recipe-PreGraph-symbol.json  pow_fwd_bf16.recipe-PostGraph-symbol.json  (+10 more)
cast/: README.md  cast.cpp
doc/: README.md
gather/: Makefile  gather.cpp
gemmTest/: Makefile  README.md
index_copy/: README.md
normalization/: Makefile  layernorm.cpp  layernorm.py  rms.cpp
reduction/: Makefile  README.md
reluTest/: relu.cpp
rms/: Makefile
sdpa/: Makefile  README.md  sdpa_recompute.cpp
slice/: Makefile  slice.cpp
softmax/: softmax.py
tools/: gen_makefile.py  test.py
transpose/: Makefile  README.md  transpose.cpp  transpose.py
unary/: Makefile  README.md  unary.cpp
(+383 files in other folders)
